--- a/index.html
+++ b/index.html
@@ -54,6 +54,28 @@
         </div>
     </div>
 
+    <div class="main-menu">
+        <div class="container">
+            <div class="brand">
+                <a href="index.html"><img src="images/icons/logotype.svg" alt="Kenkata Webshop"></a>
+            </div>
+            <div class="search"></div>
+            <div class="menu-links">
+                <a class="menu-link" href="#"><i class="fa-regular fa-user me-2"></i>My account</a>
+                <a class="menu-link" href="#"><i class="fa-regular fa-heart"></i></a>
+                <a class="menu-link" href="#"><i class="fa-regular fa-shuffle"></i></a>
+                <a class="menu-link" href="#"><i class="fa-regular fa-cart-shopping me-2"></i>
+                    <span id="cart-total">€99999.00</span>
+                </a>
+            </div>
+        </div>
+        <nav>
+            <div class="container">
+                 <div class="browse-categories">a</div>
+                 <div class="special-offer">a</div>
+            </div>
+        </nav>
+    </div>
     </header>
 
 </body>
