--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Clothes that fits everyone - KenKata</title>
+    <title>Shopping is MORE FUN - KenKata</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Clothes that fits everyone">
+    <meta name="description" content="Shopping is more fun">
     <meta name="keywords" content="KEYWORDS">
     <script src="https://kit.fontawesome.com/41c8b474e2.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous" defer></script>
@@ -90,5 +90,22 @@
         </nav>
     </div>
     </header>
+
+    <section class="showcase">
+        <div class="container">
+            <div class="showcase-body">
+                <h1>Shopping is <strong>MORE FUN</strong></h1>
+                <p>Vivamus dignissim a ex eu ornare. Ut fermentum orci vel diam ultricies faucibus. Quisque quis erat sed</p>
+                <a href="#" class="btn btn-lg btn-white">SHOP NOW</a>
+            </div>
+            <img src="images/showcase-image.svg" alt="two people standing">
+        </div>
+    </section>
+
+    <div style="height: 4000px;"></div>
+
+
+
+
 </body>
 </html>
