--- a/index.html
+++ b/index.html
@@ -288,17 +288,23 @@
                         <div class="card-background"></div>
                     </div>
                 </div>
-
-
-
             </div>
-
-
-
         </div>
     </section>
 
-
+    <section class="showcase-2">
+        <div class="container">
+            <div class="showcase-body">
+                <h1><strong>30%</strong>OFF</h1>
+                <p>For new customer</p>
+                <a href="#" class="btn btn-lg btn-theme-dark">SHOP NOW</a>
+            </div>
+            <div class="showcase-learn-more"
+                <p>Donec pulvinar arcu vitae ipsum varius cursus. Nunc iaculis fermentum iaculis. Nunc pulvinar purus at erat lacinia, ut convallis nibh consequat. Integer nulla nisi, aliquam at tellus a, viverra scelerisque purus. Nam pretium iaculis ultrices.</p>
+                <a href="#" class="btn btn-lg btn-white">LEARN MORE</a>
+            </div>
+        </div>
+    </section>
 
 
 
