--- a/index.html
+++ b/index.html
@@ -308,6 +308,158 @@
 
 
 
+
+    <section class="featured-products">
+        <div class="container">
+            <div class="section-title">
+                <h1>FEATURED <span>PRODUCTS</span></h1>
+                <img src="images/wave-line.svg" alt="waveline">
+                <p>Check out our monthly featured products from top brands</p>
+            </div>
+
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+
+                <div class="col">
+                    <div class="card h-100">
+                        <ul class="card-menu">
+                            <li><i class="fa-solid fa-circle instock"></i></li>
+                            <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
+                            <li><a href="#"><i class="fa-regular fa-shuffle"></i></a></li>
+                            <li><a href="#"><i class="fa-regular fa-magnifying-glass"></i></a></li>
+                            <li><a href="#"><i class="fa-regular fa-cart-shopping"></i></a></li>
+                        </ul>
+                        <img src="images/placeholders/woman-standing.png" alt="placeholder image">
+                        <div class="card-body">
+                            <h1>Winter collection for women's</h1>
+                            <button disabled>Fashion</button>
+                            <p class="card-old-price">€70.00</p>
+                            <div class="d-flex justify-content-between align-items-center w-100">
+                                <p class="card-discount-price">€65.00</p>
+                                <div class="text-theme">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-background"></div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <ul class="card-menu">
+                            <li><i class="fa-solid fa-circle outofstock"></i></li>
+                            <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
+                            <li><a href="#"><i class="fa-regular fa-shuffle"></i></a></li>
+                            <li><a href="#"><i class="fa-regular fa-magnifying-glass"></i></a></li>
+                            <li><a href="#"><i class="fa-regular fa-cart-shopping"></i></a></li>
+                        </ul>
+                        <img src="images/placeholders/male-standing.png" alt="placeholder image">
+                        <div class="card-body">
+                            <h1>New look men's coat</h1>
+                            <button disabled>Fashion</button>
+                            <p class="card-old-price">€45.00</p>
+                            <div class="d-flex justify-content-between align-items-center w-100">
+                                <p class="card-discount-price">€35.00</p>
+                                <div class="text-theme">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-background"></div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <ul class="card-menu">
+                            <li><i class="fa-solid fa-circle instock"></i></li>
+                            <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
+                            <li><a href="#"><i class="fa-regular fa-shuffle"></i></a></li>
+                            <li><a href="#"><i class="fa-regular fa-magnifying-glass"></i></a></li>
+                            <li><a href="#"><i class="fa-regular fa-cart-shopping"></i></a></li>
+                        </ul>
+                        <img src="images/placeholders/jacket.png" alt="placeholder image">
+                        <div class="card-body">
+                            <h1>Red women's blazer full</h1>
+                            <button disabled>Fashion</button>
+                            <p class="card-old-price">€28.00</p>
+                            <div class="d-flex justify-content-between align-items-center w-100">
+                                <p class="card-discount-price">€25.00</p>
+                                <div class="text-theme">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-background"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+    <section class="showcase-3">
+        <div class="container">
+            <div class="info-box">
+                <div>
+                    <h1>FLASH SALE</h1>
+                    <p>UP TO 50% OFF</p>
+                </div>
+            </div>
+            <div class="count-down">
+                <div>
+                    <h1>7</h1>
+                    <p>Days</p>
+                </div>
+            </div>
+            <div class="count-down">
+                <div>
+                    <h1>23</h1>
+                    <p>Hours</p>
+                </div>
+            </div>
+            <div class="count-down">
+                <div>
+                    <h1>46</h1>
+                    <p>Minutes</p>
+                </div>
+            </div>
+            <div class="count-down">
+                <div>
+                    <h1>12</h1>
+                    <p>Seconds</p>
+                </div>
+            </div>
+            <div class="button">
+                <a href="#" class="btn btn-lg btn-white">SHOP NOW</a>
+            </div>
+
+
+        </div>
+    </section>
+
+
+
+
+
+
+
+
+
+
+
+
     <div style="height: 4000px;"></div>
 
 
