--- a/index.html
+++ b/index.html
@@ -451,16 +451,124 @@
 
 
 
+    <section class="top-sellers">
+        <div class="container">
+            <div class="section-title">
+                <h1>TOP <span>SELLERS</span></h1>
+                <img src="images/wave-line.svg" alt="waveline">
+                <p>Check out our weekly top sellers in all category</p>
+            </div>
+            <div class="grid">
+                    <a href="#" id="box-1" class="category-box">
+                        <div class="card">
+                            <ul class="card-menu">
+                                <li><i class="fa-solid fa-circle instock"></i></li>
+                                <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
+                                <li><a href="#"><i class="fa-regular fa-shuffle"></i></a></li>
+                                <li><a href="#"><i class="fa-regular fa-magnifying-glass"></i></a></li>
+                                <li><a href="#"><i class="fa-regular fa-cart-shopping"></i></a></li>
+                            </ul>
+                            <img src="images/placeholders/placeholder-male-body-arms-up.png" alt="placeholder image">
+                            <div class="card-body">
+                                <h1>Men's denim shirts full</h1>
+                                <button disabled>Fashion</button>
+                                <p class="card-old-price">€38.00</p>
+                                <div class="d-flex justify-content-between align-items-center w-100">
+                                    <p class="card-discount-price">€17.00</p>
+                                    <div class="text-theme">
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card-background"></div>
+                        </div>
+                    </div>
+                    <a href="#" id="box-2" class="category-box">
+                        <div class="card">
+                            <ul class="card-menu">
+                                <li><i class="fa-solid fa-circle outofstock"></i></li>
+                                <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
+                                <li><a href="#"><i class="fa-regular fa-shuffle"></i></a></li>
+                                <li><a href="#"><i class="fa-regular fa-magnifying-glass"></i></a></li>
+                                <li><a href="#"><i class="fa-regular fa-cart-shopping"></i></a></li>
+                            </ul>
+                            <img src="images/placeholders/placeholder-female-from-side.png" alt="placeholder image">
+                            <div class="card-body">
+                                <h1>Women's leather bag and shoe</h1>
+                                <button disabled>Fashion</button>
+                                <p class="card-old-price">€48.00</p>
+                                <div class="d-flex justify-content-between align-items-center w-100">
+                                    <p class="card-discount-price">€45.00</p>
+                                    <div class="text-theme">
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-regular fa-star"></i>
+                                        <i class="fa-regular fa-star"></i>
+                                        <i class="fa-regular fa-star"></i>
+                                        <i class="fa-regular fa-star"></i>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card-background"></div>
+                        </div>
+                    </div>
+                    <a href="#" id="box-3" class="category-box">
+                        <div class="card">
+                            <ul class="card-menu">
+                                <li><i class="fa-solid fa-circle instock"></i></li>
+                                <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
+                                <li><a href="#"><i class="fa-regular fa-shuffle"></i></a></li>
+                                <li><a href="#"><i class="fa-regular fa-magnifying-glass"></i></a></li>
+                                <li><a href="#"><i class="fa-regular fa-cart-shopping"></i></a></li>
+                            </ul>
+                            <img src="images/placeholders/placeholder-shoes.png" alt="placeholder image">
+                            <div class="card-body">
+                                <h1>New look men's sneakers</h1>
+                                <button disabled>Fashion</button>
+                                <p class="card-old-price">€54.00</p>
+                                <div class="d-flex justify-content-between align-items-center w-100">
+                                    <p class="card-discount-price">€50.00</p>
+                                    <div class="text-theme">
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-regular fa-star"></i>
+                                        <i class="fa-regular fa-star"></i>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card-background"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
+    </section>
+
+
+
+    <section class="showcase-4">
+        <div class="container">
+            <div class="showcase-body">
+                <h1>SUBSCRIBE <strong>NOW</strong></h1>
+                <p>Signup for awesome news about our new products and
+                    know our special discounts on products.</p>
+            </div>
+            <img src="images/grey-background.png" alt="grey background">
+        </div>
+    </section>
 
 
 
 
 
 
-
-
-
-    <div style="height: 4000px;"></div>
+    <div style="height: 5000px;"></div>
 
 
 </body>
