--- a/index.html
+++ b/index.html
@@ -456,8 +456,7 @@
             </div>
 
             <div class="grid">
-                <a href="#" id="card-box-1" class="card-box">
-                    <div class="card">
+                    <div id="card-box-1" class="card">
                         <ul class="card-menu">
                             <li><i class="fa-solid fa-circle instock"></i></li>
                             <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
@@ -465,7 +464,7 @@
                             <li><a href="#"><i class="fa-regular fa-magnifying-glass"></i></a></li>
                             <li><a href="#"><i class="fa-regular fa-cart-shopping"></i></a></li>
                         </ul>
-                        <img src="images/placeholders/woman-standing.png" alt="placeholder image">
+                        <img src="images/placeholders/placeholder-male-body-arms-up.png" alt="placeholder image">
                         <div class="card-body">
                             <h1>Winter collection for women's</h1>
                             <button disabled>Fashion</button>
@@ -483,9 +482,7 @@
                         </div>
                         <div class="card-background"></div>
                     </div>
-                </a>
-                <a href="#" id="card-box-2" class="card-box">
-                    <div class="card">
+                    <div id="card-box-2" class="card">
                         <ul class="card-menu">
                             <li><i class="fa-solid fa-circle instock"></i></li>
                             <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
@@ -511,9 +508,7 @@
                         </div>
                         <div class="card-background"></div>
                     </div>
-                </a>
-                <a href="#" id="card-box-3" class="card-box">
-                    <div class="card">
+                    <div id="card-box-3" class="card">
                         <ul class="card-menu">
                             <li><i class="fa-solid fa-circle instock"></i></li>
                             <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
@@ -539,7 +534,6 @@
                         </div>
                         <div class="card-background"></div>
                     </div>
-                </a>
 
             </div>
 
