--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
                 </div>
             </div>
             <div class="button">
-                <a href="#" class="btn btn-lg btn-white">SHOP NOW</a>
+                <a href="#" class="btn btn-lg btn-theme-2">SHOP NOW</a>
             </div>
 
 
