--- a/account.html
+++ b/account.html
@@ -103,6 +103,17 @@
                 </ul>
             </nav>
         </div>
+    </section>
+
+    <section class="signup-signin">
+        <div class="container">
+            <div class="card">
+                <div class="card-body">
+                    <h1 class="card-title">REGISTER</h1>
+                    <p class="card-text-small">Registering for this site allows you to access your order status and history. Just fill in the fields below, and we’ll get a new account set up for you in no time. We will only ask you for information necessary to make the purchase process faster and easier.</p>
+                </div>
+            </div>
+        </div>
 
     </section>
 
