--- a/account.html
+++ b/account.html
@@ -109,8 +109,50 @@
         <div class="container">
             <div class="card">
                 <div class="card-body">
+                    <h1 class="card-title">LOGIN</h1>
+                    <form id="signinForm">
+                        <div class="my-4">
+                            <label for="email">Email <span class="required">*</span></label>
+                            <input id="emal" type="email" required>
+                        </div>
+                        <div class="mb-4">
+                            <label for="password">Password <span class="required">*</span></label>
+                            <input id="password" type="password" required>
+                        </div>
+                        <p class="card-text">Your personal data will be used to support your experience throughout this website, to manage access to your account, and for other purposes described in our <a href="">privacy policy</a>.</p>
+                        <div class="mb-3 d-grid">
+                            <button type="submit" class="btn btn-lg btn-theme"> LOG IN</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-body">
                     <h1 class="card-title">REGISTER</h1>
-                    <p class="card-text-small">Registering for this site allows you to access your order status and history. Just fill in the fields below, and we’ll get a new account set up for you in no time. We will only ask you for information necessary to make the purchase process faster and easier.</p>
+                    <p class="card-text text-small">Registering for this site allows you to access your order status and history. Just fill in the fields below, and we’ll get a new account set up for you in no time. We will only ask you for information necessary to make the purchase process faster and easier.</p>
+                    
+                    <form id="signupForm">
+                        <div class="mb-4">
+                            <label for="firstName">Firstname <span class="required">*</span></label>
+                            <input id="firstName" type="text" required>
+                        </div>
+                        <div class="mb-4">
+                            <label for="lastName">Lastname <span class="required">*</span></label>
+                            <input id="lastName" type="text" required>
+                        </div>
+                        <div class="mb-4">
+                            <label for="email">Email <span class="required">*</span></label>
+                            <input id="emal" type="email" required>
+                        </div>
+                        <div class="mb-4">
+                            <label for="password">Password <span class="required">*</span></label>
+                            <input id="password" type="password" required>
+                        </div>
+                        <p class="card-text">Your personal data will be used to support your experience throughout this website, to manage access to your account, and for other purposes described in our <a href="">privacy policy</a>.</p>
+                        <div class="mb-3 d-grid">
+                            <button type="submit" class="btn btn-lg btn-theme"> REGISTER</button>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
@@ -118,6 +160,8 @@
     </section>
 
 
+
+    <div style="height: 4000px;"></div>
 
 
 </body>
