--- a/account.html
+++ b/account.html
@@ -105,23 +105,29 @@
         </div>
     </section>
 
-    <section class="signup-signin">
+    <section class="signup-signin form-theme">
         <div class="container">
             <div class="card">
                 <div class="card-body">
                     <h1 class="card-title">LOGIN</h1>
                     <form id="signinForm">
                         <div class="my-4">
-                            <label for="email">Email <span class="required">*</span></label>
-                            <input id="emal" type="email" required>
+                            <label for="signin_email">Email <span class="required">*</span></label>
+                            <input id="signin_emal" type="email" required>
                         </div>
                         <div class="mb-4">
-                            <label for="password">Password <span class="required">*</span></label>
-                            <input id="password" type="password" required>
+                            <label for="signin_password">Password <span class="required">*</span></label>
+                            <input id="signin_password" type="password" required>
                         </div>
-                        <p class="card-text">Your personal data will be used to support your experience throughout this website, to manage access to your account, and for other purposes described in our <a href="">privacy policy</a>.</p>
-                        <div class="mb-3 d-grid">
+                        <div class="mb-4 d-grid">
                             <button type="submit" class="btn btn-lg btn-theme"> LOG IN</button>
+                        </div>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="d-flex">
+                                <input id="signin_rememberMe" type="checkbox" class="me-2">
+                                <label for="signin_rememberMe">Remember me</label>
+                            </div>
+                            <a href="#">Lost your password?</a>
                         </div>
                     </form>
                 </div>
@@ -133,20 +139,20 @@
                     
                     <form id="signupForm">
                         <div class="mb-4">
-                            <label for="firstName">Firstname <span class="required">*</span></label>
-                            <input id="firstName" type="text" required>
+                            <label for="signup_firstName">Firstname <span class="required">*</span></label>
+                            <input id="signup_firstName" type="text" required>
                         </div>
                         <div class="mb-4">
-                            <label for="lastName">Lastname <span class="required">*</span></label>
-                            <input id="lastName" type="text" required>
+                            <label for="signup_lastName">Lastname <span class="required">*</span></label>
+                            <input id="signup_lastName" type="text" required>
                         </div>
                         <div class="mb-4">
-                            <label for="email">Email <span class="required">*</span></label>
-                            <input id="emal" type="email" required>
+                            <label for="signup_email">Email <span class="required">*</span></label>
+                            <input id="signup_emal" type="email" required>
                         </div>
                         <div class="mb-4">
-                            <label for="password">Password <span class="required">*</span></label>
-                            <input id="password" type="password" required>
+                            <label for="signup_password">Password <span class="required">*</span></label>
+                            <input id="signup_password" type="password" required>
                         </div>
                         <p class="card-text">Your personal data will be used to support your experience throughout this website, to manage access to your account, and for other purposes described in our <a href="">privacy policy</a>.</p>
                         <div class="mb-3 d-grid">
