--- a/account.html
+++ b/account.html
@@ -122,12 +122,22 @@
                         <div class="mb-4 d-grid">
                             <button type="submit" class="btn btn-lg btn-theme"> LOG IN</button>
                         </div>
-                        <div class="d-flex justify-content-between align-items-center">
+                        <div class="mb-4 d-flex justify-content-between align-items-center">
                             <div class="d-flex">
                                 <input id="signin_rememberMe" type="checkbox" class="me-2">
                                 <label for="signin_rememberMe">Remember me</label>
                             </div>
                             <a href="#">Lost your password?</a>
+                        </div>
+                        <div class="mb-4">
+                            <div class="external-logins">
+                                <div class="label">OR LOGIN WITH</div>
+                                <div class="line"></div>
+                            </div>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <div>Facebook</div>
+                                <div>Google</div>
+                            </div>
                         </div>
                     </form>
                 </div>
