--- a/account.html
+++ b/account.html
@@ -57,7 +57,12 @@
             <div class="brand">
                 <a href="index.html"><img src="images/icons/logotype.svg" alt="Kenkata Webshop"></a>
             </div>
-            <div class="search"></div>
+            <div class="search">
+                <form id="searchboxForm">
+                    <input id="quary" type="text" placeholder="Search products...">
+                    <button type="submit"><i class="fa-regular fa-magnifying-glass"></i></button>
+                </form>
+            </div>
             <div class="menu-links">
                 <a class="menu-link" href="account.html"><i class="fa-regular fa-user me-2"></i>My account</a>
                 <a class="menu-link" href="#"><i class="fa-regular fa-heart"></i></a>
@@ -129,14 +134,18 @@
                             </div>
                             <a href="#">Lost your password?</a>
                         </div>
-                        <div class="mb-4">
-                            <div class="external-logins">
+                        <div class="mb-4 external-logins">
+                            <div class="mb-0">
                                 <div class="label">OR LOGIN WITH</div>
                                 <div class="line"></div>
                             </div>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <div>Facebook</div>
-                                <div>Google</div>
+                        </div>
+                        <div class="external-socialmedia-buttons">
+                            <div class="facebook-button">
+                                <button></button>
+                            </div>
+                            <div class="google-button">
+                                <button></button>
                             </div>
                         </div>
                     </form>
