--- a/account.html
+++ b/account.html
@@ -184,9 +184,14 @@
 
     </section>
 
+    <section class="bottom-line">
+        <div class="container">
+            <div class="copyright">
+                <p>© Copyright 2022 Kenkata</p>
+            </div>
+        </div>
+    </section>
 
-
-    <div style="height: 4000px;"></div>
 
 
 </body>
