--- a/account.html
+++ b/account.html
@@ -160,18 +160,30 @@
                         <div class="mb-4">
                             <label for="signup_firstName">Firstname <span class="required">*</span></label>
                             <input id="signup_firstName" type="text" required>
+                            <div class="invalid-feedback">
+                                Please write a valid firstname.
+                            </div>
                         </div>
                         <div class="mb-4">
                             <label for="signup_lastName">Lastname <span class="required">*</span></label>
                             <input id="signup_lastName" type="text" required>
+                            <div class="invalid-feedback">
+                                Please write a valid lastname.
+                            </div>
                         </div>
                         <div class="mb-4">
                             <label for="signup_email">Email <span class="required">*</span></label>
                             <input id="signup_emal" type="email" required>
+                            <div class="invalid-feedback">
+                                Please write a valid emailadress.
+                            </div>
                         </div>
                         <div class="mb-4">
                             <label for="signup_password">Password <span class="required">*</span></label>
-                            <input id="signup_password" type="password" required>
+                            <input id="signup_password" type="password" required minlength="8">
+                            <div class="invalid-feedback">
+                                Please write a valid password.
+                            </div>
                         </div>
                         <p class="card-text">Your personal data will be used to support your experience throughout this website, to manage access to your account, and for other purposes described in our <a href="">privacy policy</a>.</p>
                         <div class="mb-3 d-grid">
