--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>    
     <header>
+            <!-- Top menu including dropdown menus and links -->
         <div class="top-menu">
         <div class="container">
             <div class="site-settings">
@@ -53,6 +54,8 @@
         </div>
         </div>
     </div>
+
+            <!-- Main menu including websites logotype, searchbox and links -->
     <div class="main-menu">
         <div class="container">
             <div class="brand">
@@ -67,7 +70,10 @@
             <div class="menu-links">
                 <a class="menu-link" href="account.html"><i class="fa-regular fa-user me-2"></i>My account</a>
                 <a class="menu-link" href="#"><i class="fa-regular fa-heart"></i></a>
-                <a class="menu-link" href="#"><i class="fa-regular fa-shuffle"></i></a>
+                <a id="shuffle" class="menu-link" href="#">
+                    <span class="badge rounded-pill">0</span>
+                    <i class="fa-regular fa-shuffle me-2"></i>
+                </a>
                 <a id="cart" class="menu-link" href="#">
                     <span class="badge rounded-pill">99+</span>
                     <i class="fa-regular fa-cart-shopping me-2"></i>
@@ -75,6 +81,8 @@
                 </a>
             </div>
         </div>
+
+            <!--Dropdown menu and a button -->
         <nav>
             <div class="container">
                 <div class="browse-categories">
@@ -99,6 +107,7 @@
     </div>
     </header>
 
+        <!-- A showcase with a button and image -->
     <section class="showcase">
         <div class="container">
             <div class="showcase-body">
@@ -110,6 +119,7 @@
         </div>
     </section>
 
+        <!-- A section tite and four boxes with website information -->
     <section class="webshop-info">
         <div class="container">
             <div class="info-box">
@@ -144,6 +154,7 @@
         </div>
     </section>
 
+        <!-- A section title and seven grid boxes showing the websites products categories -->
     <section class="shop-by-category">
         <div class="container">
             <div class="section-title">
@@ -200,6 +211,7 @@
         </div>
     </section>
 
+        <!-- A section title and three card boxes with item information -->
     <section class="new-arrivals">
         <div class="container">
             <div class="section-title">
@@ -217,7 +229,10 @@
                             <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
                             <li><a href="#"><i class="fa-regular fa-shuffle"></i></a></li>
                             <li><a href="#"><i class="fa-regular fa-magnifying-glass"></i></a></li>
-                            <li><a href="#"><i class="fa-regular fa-cart-shopping"></i></a></li>
+                            <div id="shopping-cart">
+                                <li><a href="#"><i class="fa-regular fa-cart-shopping"></i></a></li>
+                                <img src="images/Tooltip.svg" alt="">
+                            </div>
                         </ul>
                         <img src="images/placeholders/placeholder-male-body.png" alt="placeholder image">
                         <div class="card-body">
@@ -245,7 +260,10 @@
                             <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
                             <li><a href="#"><i class="fa-regular fa-shuffle"></i></a></li>
                             <li><a href="#"><i class="fa-regular fa-magnifying-glass"></i></a></li>
-                            <li><a href="#"><i class="fa-regular fa-cart-shopping"></i></a></li>
+                            <div id="shopping-cart">
+                                <li><a href="#"><i class="fa-regular fa-cart-shopping"></i></a></li>
+                                <img src="images/Tooltip.svg" alt="">
+                            </div>
                         </ul>
                         <img src="images/placeholders/placeholder-male-chest.png" alt="placeholder image">
                         <div class="card-body">
@@ -273,7 +291,10 @@
                             <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
                             <li><a href="#"><i class="fa-regular fa-shuffle"></i></a></li>
                             <li><a href="#"><i class="fa-regular fa-magnifying-glass"></i></a></li>
-                            <li><a href="#"><i class="fa-regular fa-cart-shopping"></i></a></li>
+                            <div id="shopping-cart">
+                                <li><a href="#"><i class="fa-regular fa-cart-shopping"></i></a></li>
+                                <img src="images/Tooltip.svg" alt="">
+                            </div>
                         </ul>
                         <img src="images/placeholders/placeholder-female-body.png" alt="placeholder image">
                         <div class="card-body">
@@ -298,21 +319,24 @@
         </div>
     </section>
 
+        <!-- Another showcase with information and buttons -->
     <section class="showcase-2">
         <div class="container">
             <div class="showcase-body">
                 <h1><strong>30%</strong>OFF</h1>
-                <p>For new customer</p>
+                <p>FOR NEW COSTUMER</p>
                 <a href="#" class="btn btn-lg btn-theme-dark">SHOP NOW</a>
             </div>
             <div class="showcase-learn-more"
-                <p>Donec pulvinar arcu vitae ipsum varius cursus. Nunc iaculis fermentum iaculis. Nunc pulvinar purus at erat lacinia, ut convallis nibh consequat. Integer nulla nisi, aliquam at tellus a, viverra scelerisque purus. Nam pretium iaculis ultrices.</p>
-                <a href="#" class="btn btn-lg btn-white">LEARN MORE</a>
+                <div class="learn-more">
+                    <p>Donec pulvinar arcu vitae ipsum varius cursus. Nunc iaculis fermentum iaculis. Nunc pulvinar purus at erat lacinia, ut convallis nibh consequat. Integer nulla nisi, aliquam at tellus a, viverra scelerisque purus. Nam pretium iaculis ultrices.</p> 
+                    <a href="#" class="btn btn-lg btn-white">LEARN MORE</a>
+                </div>
             </div>
         </div>
     </section>
 
-
+        <!-- A section title and three card boxes with item information -->
     <section class="featured-products">
         <div class="container">
             <div class="section-title">
@@ -330,7 +354,10 @@
                             <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
                             <li><a href="#"><i class="fa-regular fa-shuffle"></i></a></li>
                             <li><a href="#"><i class="fa-regular fa-magnifying-glass"></i></a></li>
-                            <li><a href="#"><i class="fa-regular fa-cart-shopping"></i></a></li>
+                            <div id="shopping-cart">
+                                <li><a href="#"><i class="fa-regular fa-cart-shopping"></i></a></li>
+                                <img src="images/Tooltip.svg" alt="">
+                            </div>
                         </ul>
                         <img src="images/placeholders/woman-standing.png" alt="placeholder image">
                         <div class="card-body">
@@ -358,7 +385,10 @@
                             <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
                             <li><a href="#"><i class="fa-regular fa-shuffle"></i></a></li>
                             <li><a href="#"><i class="fa-regular fa-magnifying-glass"></i></a></li>
-                            <li><a href="#"><i class="fa-regular fa-cart-shopping"></i></a></li>
+                            <div id="shopping-cart">
+                                <li><a href="#"><i class="fa-regular fa-cart-shopping"></i></a></li>
+                                <img src="images/Tooltip.svg" alt="">
+                            </div>
                         </ul>
                         <img src="images/placeholders/male-standing.png" alt="placeholder image">
                         <div class="card-body">
@@ -386,7 +416,10 @@
                             <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
                             <li><a href="#"><i class="fa-regular fa-shuffle"></i></a></li>
                             <li><a href="#"><i class="fa-regular fa-magnifying-glass"></i></a></li>
-                            <li><a href="#"><i class="fa-regular fa-cart-shopping"></i></a></li>
+                            <div id="shopping-cart">
+                                <li><a href="#"><i class="fa-regular fa-cart-shopping"></i></a></li>
+                                <img src="images/Tooltip.svg" alt="">
+                            </div>
                         </ul>
                         <img src="images/placeholders/jacket.png" alt="placeholder image">
                         <div class="card-body">
@@ -411,7 +444,7 @@
         </div>
     </section>
 
-
+        <!-- Another showcase with information and button -->
     <section class="showcase-3">
         <div class="container">
             <div class="info-box">
@@ -421,38 +454,30 @@
                 </div>
             </div>
             <div class="count-down">
-                <div>
+                <div class="time">
                     <h1>7</h1>
                     <p>Days</p>
                 </div>
-            </div>
-            <div class="count-down">
-                <div>
+                <div class="time">
                     <h1>23</h1>
                     <p>Hours</p>
                 </div>
-            </div>
-            <div class="count-down">
-                <div>
+                <div class="time">
                     <h1>46</h1>
                     <p>Minutes</p>
                 </div>
-            </div>
-            <div class="count-down">
-                <div>
+                <div class="time">
                     <h1>12</h1>
                     <p>Seconds</p>
                 </div>
+                <div class="button">
+                    <a href="#" class="btn btn-lg btn-theme-2">SHOP NOW</a>
+                </div>
             </div>
-            <div class="button">
-                <a href="#" class="btn btn-lg btn-theme-2">SHOP NOW</a>
-            </div>
-
-
         </div>
     </section>
 
-
+        <!-- Section title and three grid card boxes with item information -->
     <section class="top-sellers">
         <div class="container">
             <div class="section-title">
@@ -464,24 +489,30 @@
             <div class="grid">
                 <div id="card-box-1" class="card">
                     <ul class="card-menu">
-                        <li><i class="fa-solid fa-circle instock"></i></li>
+                        <li><i class="fa-solid fa-circle outofstock"></i></li>
                         <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
                         <li><a href="#"><i class="fa-regular fa-shuffle"></i></a></li>
-                        <li><a href="#"><i class="fa-regular fa-magnifying-glass"></i></a></li>
-                        <li><a href="#"><i class="fa-regular fa-cart-shopping"></i></a></li>
+                        <div id="magnifying-glass">
+                            <li><a href="#"><i class="fa-regular fa-magnifying-glass"></i></a></li>
+                            <img src="images/Tooltip-magnifying.svg" alt="tooltip image">
+                        </div>
+                        <div id="shopping-cart">
+                            <li><a href="#"><i class="fa-regular fa-cart-shopping"></i></a></li>
+                            <img src="images/Tooltip.svg" alt="">
+                        </div>
                     </ul>
                     <img src="images/placeholders/placeholder-male-body-arms-up.png" alt="placeholder image">
                     <div class="card-body">
-                        <h1>Winter collection for women's</h1>
+                        <h1>Men's denim shirts full</h1>
                         <button disabled>Fashion</button>
-                        <p class="card-old-price">€50.00</p>
+                        <p class="card-old-price">€85.00</p>
                         <div class="d-flex justify-content-between align-items-center w-100">
-                            <p class="card-discount-price">€20.00</p>
+                            <p class="card-discount-price">€78.00</p>
                             <div class="text-theme">
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-regular fa-star"></i>
                                 <i class="fa-regular fa-star"></i>
                             </div>
                         </div>
@@ -493,16 +524,22 @@
                         <li><i class="fa-solid fa-circle instock"></i></li>
                         <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
                         <li><a href="#"><i class="fa-regular fa-shuffle"></i></a></li>
-                        <li><a href="#"><i class="fa-regular fa-magnifying-glass"></i></a></li>
-                        <li><a href="#"><i class="fa-regular fa-cart-shopping"></i></a></li>
+                        <div id="magnifying-glass">
+                            <li><a href="#"><i class="fa-regular fa-magnifying-glass"></i></a></li>
+                            <img src="images/Tooltip-magnifying.svg" alt="tooltip image">
+                        </div>
+                        <div id="shopping-cart">
+                            <li><a href="#"><i class="fa-regular fa-cart-shopping"></i></a></li>
+                            <img src="images/Tooltip.svg" alt="">
+                        </div>
                     </ul>
                     <img src="images/placeholders/placeholder-female-from-side.png" alt="placeholder image">
                     <div class="card-body">
                         <h1>Women's leather bag and shoe</h1>
                         <button disabled>Fashion</button>
-                        <p class="card-old-price">€50.00</p>
+                        <p class="card-old-price">€15.00</p>
                         <div class="d-flex justify-content-between align-items-center w-100">
-                            <p class="card-discount-price">€20.00</p>
+                            <p class="card-discount-price">€18.00</p>
                             <div class="text-theme">
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
@@ -519,22 +556,28 @@
                         <li><i class="fa-solid fa-circle instock"></i></li>
                         <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
                         <li><a href="#"><i class="fa-regular fa-shuffle"></i></a></li>
-                        <li><a href="#"><i class="fa-regular fa-magnifying-glass"></i></a></li>
-                        <li><a href="#"><i class="fa-regular fa-cart-shopping"></i></a></li>
+                        <div id="magnifying-glass">
+                            <li><a href="#"><i class="fa-regular fa-magnifying-glass"></i></a></li>
+                            <img src="images/Tooltip-magnifying.svg" alt="tooltip image">
+                        </div>
+                        <div id="shopping-cart">
+                            <li><a href="#"><i class="fa-regular fa-cart-shopping"></i></a></li>
+                            <img src="images/Tooltip.svg" alt="">
+                        </div>
                     </ul>
                     <img src="images/placeholders/placeholder-shoes.png" alt="placeholder image">
                     <div class="card-body">
                         <h1>New look men's sneakers</h1>
                         <button disabled>Fashion</button>
-                        <p class="card-old-price">€50.00</p>
+                        <p class="card-old-price">€55.00</p>
                         <div class="d-flex justify-content-between align-items-center w-100">
-                            <p class="card-discount-price">€20.00</p>
+                            <p class="card-discount-price">€50.00</p>
                             <div class="text-theme">
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
-                                <i class="fa-regular fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
                             </div>
                         </div>
                     </div>
@@ -544,19 +587,25 @@
         </div>
     </section>
 
-
+        <!-- Another showcase with information and image -->
     <section class="subscribe-now">
         <div class="container">
             <div class="subscribe-now-body">
                 <h1>SUBSCRIBE <strong>NOW</strong></h1>
                 <p>Signup for awesome news about our new products and
                     know our special discounts on products.</p>
+                <div class="search">
+                    <form id="searchboxForm">
+                        <input id="quary" type="text" placeholder="Enter email address">
+                        <button type="submit"><i class= <p>Subscribe</p> ></i></button>
+                    </form>
+                </div>
             </div>
             <img src="images/grey-background.png" alt="grey background">
         </div>
     </section>
 
-
+        <!-- Bottom line container with text -->
     <section class="bottom-line">
         <div class="container">
             <div class="copyright">
@@ -564,9 +613,5 @@
             </div>
         </div>
     </section>
-
-
-
-
 </body>
 </html>
