--- a/index.html
+++ b/index.html
@@ -228,7 +228,10 @@
                             <li><i class="fa-solid fa-circle instock"></i></li>
                             <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
                             <li><a href="#"><i class="fa-regular fa-shuffle"></i></a></li>
-                            <li><a href="#"><i class="fa-regular fa-magnifying-glass"></i></a></li>
+                            <div id="magnifying-glass">
+                                <li><a href="#"><i class="fa-regular fa-magnifying-glass"></i></a></li>
+                                <img src="images/Tooltip-magnifying.svg" alt="tooltip image">
+                            </div>
                             <div id="shopping-cart">
                                 <li><a href="#"><i class="fa-regular fa-cart-shopping"></i></a></li>
                                 <img src="images/Tooltip.svg" alt="">
@@ -259,7 +262,10 @@
                             <li><i class="fa-solid fa-circle outofstock"></i></li>
                             <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
                             <li><a href="#"><i class="fa-regular fa-shuffle"></i></a></li>
-                            <li><a href="#"><i class="fa-regular fa-magnifying-glass"></i></a></li>
+                            <div id="magnifying-glass">
+                                <li><a href="#"><i class="fa-regular fa-magnifying-glass"></i></a></li>
+                                <img src="images/Tooltip-magnifying.svg" alt="tooltip image">
+                            </div>
                             <div id="shopping-cart">
                                 <li><a href="#"><i class="fa-regular fa-cart-shopping"></i></a></li>
                                 <img src="images/Tooltip.svg" alt="">
@@ -290,7 +296,10 @@
                             <li><i class="fa-solid fa-circle instock"></i></li>
                             <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
                             <li><a href="#"><i class="fa-regular fa-shuffle"></i></a></li>
-                            <li><a href="#"><i class="fa-regular fa-magnifying-glass"></i></a></li>
+                            <div id="magnifying-glass">
+                                <li><a href="#"><i class="fa-regular fa-magnifying-glass"></i></a></li>
+                                <img src="images/Tooltip-magnifying.svg" alt="tooltip image">
+                            </div>
                             <div id="shopping-cart">
                                 <li><a href="#"><i class="fa-regular fa-cart-shopping"></i></a></li>
                                 <img src="images/Tooltip.svg" alt="">
@@ -353,7 +362,10 @@
                             <li><i class="fa-solid fa-circle instock"></i></li>
                             <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
                             <li><a href="#"><i class="fa-regular fa-shuffle"></i></a></li>
-                            <li><a href="#"><i class="fa-regular fa-magnifying-glass"></i></a></li>
+                            <div id="magnifying-glass">
+                                <li><a href="#"><i class="fa-regular fa-magnifying-glass"></i></a></li>
+                                <img src="images/Tooltip-magnifying.svg" alt="tooltip image">
+                            </div>
                             <div id="shopping-cart">
                                 <li><a href="#"><i class="fa-regular fa-cart-shopping"></i></a></li>
                                 <img src="images/Tooltip.svg" alt="">
@@ -384,7 +396,10 @@
                             <li><i class="fa-solid fa-circle outofstock"></i></li>
                             <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
                             <li><a href="#"><i class="fa-regular fa-shuffle"></i></a></li>
-                            <li><a href="#"><i class="fa-regular fa-magnifying-glass"></i></a></li>
+                            <div id="magnifying-glass">
+                                <li><a href="#"><i class="fa-regular fa-magnifying-glass"></i></a></li>
+                                <img src="images/Tooltip-magnifying.svg" alt="tooltip image">
+                            </div>
                             <div id="shopping-cart">
                                 <li><a href="#"><i class="fa-regular fa-cart-shopping"></i></a></li>
                                 <img src="images/Tooltip.svg" alt="">
@@ -415,7 +430,10 @@
                             <li><i class="fa-solid fa-circle instock"></i></li>
                             <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
                             <li><a href="#"><i class="fa-regular fa-shuffle"></i></a></li>
-                            <li><a href="#"><i class="fa-regular fa-magnifying-glass"></i></a></li>
+                            <div id="magnifying-glass">
+                                <li><a href="#"><i class="fa-regular fa-magnifying-glass"></i></a></li>
+                                <img src="images/Tooltip-magnifying.svg" alt="tooltip image">
+                            </div>
                             <div id="shopping-cart">
                                 <li><a href="#"><i class="fa-regular fa-cart-shopping"></i></a></li>
                                 <img src="images/Tooltip.svg" alt="">
